# project_folder

./: .flake8  .gitignore  README.md  hh.py  main.py  pyproject.toml  requirements.txt
src/: Vacancy.py  abstract_class.py  preview.py  user_interaction.py  vacancy.py  vacancy_storage.py
tests/: test_abstract_class.py  test_preview.py  test_vacancy.py  test_vacancy_storage.py
